syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

// The geographical location message
message Location {
  string address = 1;
  string city = 2;
  string postalCode = 3;
  string state = 4;
  string country = 5;
  string lga = 6;
}

message Coordinate {
  float lat = 1;
  float lng = 2;
}