syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message CreateAnnouncementRequest {
    string title = 1;
    string content = 2;
}

message CreateAnnouncementResponse {
  string news_id = 1;
  string msg = 2;
}

message GetChurchAnnouncementsRequest {
    string user_id = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message GetAnnouncementsResponse {
    Announcement post = 1;
    bool has_more = 3;
}

message Announcement {
    string post_id = 1;
    string user_id = 2;
    string title = 3;
    string content = 4;
    string name = 5;
    string username = 6;
    string profile_image = 7;
    google.protobuf.Timestamp timestamp = 8;
    bool is_verified = 9;
    optional string reason = 10;
}

message GetAnnouncementsForUserRequest {
    int32 page_number = 1;
    int32 page_size = 2;
}